Update gradle config and make the code compatible with JAVA 1.8